# python-project-template

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-enhancement.yml  03-documentation.yml
.github/workflows/: ci.yml  docs  pydoc.yml  python.yml
docs/: CONTRIBUTING.md  README.md  api-reference.md  index.md  license.md  reference.md
docs/api-reference/: index.md
docs/documentation/: index.md
docs/usage/: index.md
src/project_name/: greeter.py  main.py
