# The build-system section is mandatory and tells tools like pip how to build your project.
[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

# The project section contains the core metadata for your package.
# This information is used by packaging tools and displayed on PyPI.
[project]
name = "project_name"
version = "0.1.0"
authors = [
  { name="Your Name", email="your@email.com" },
]
description = "A short description of your project."
readme = "README.md"
requires-python = ">=3.10"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Project dependencies are listed here. These are required for your code to run.
dependencies = [
    # e.g., "requests>=2.20.0",
]

# Optional dependencies are for development, testing, etc.
# Install them with: pip install .[dev]
[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "mypy",
    "pre-commit",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-callouts"
]

[project.scripts]
main = "project_name.main:run_app"

# This section configures the build tool, setuptools.
[tool.setuptools]
# This line is crucial for finding your package inside the src/ directory.
package-dir = {"" = "src"}

# This section configures the Ruff linter and formatter.
[tool.ruff]
# Set the maximum line length. 88 is the default for Black.
line-length = 88
# Specify which Python version your code targets.
target-version = "py310"

[tool.ruff.lint]
# Select the rule sets you want to enable.
# E/F: Standard pyflakes/pycodestyle errors
# I: isort for import sorting
# UP: pyupgrade for modernizing code
select = ["E", "F", "I", "UP"]

# This section configures the Mypy type checker.
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# This section configures pytest.
[tool.pytest.ini_options]
minversion = "8.0"
# Add command-line options here. -ra shows extra summary info for all but passed tests.
addopts = "-ra -q"
# Tell pytest where to find the tests.
testpaths = [
    "tests",
]